veecle-os-runtime-macros/tests/ui/actor/unknown_attribute_argument.rs
#[veecle_os_runtime_macros::actor(foo = "bar")]
async fn macro_test_actor() -> std::convert::Infallible {
    unreachable!("We only care about the code compiling.");
}

fn main() {}
